; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_HttpRequestEx2.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Wpc.c_HttpRequestEx2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @HttpRequestEx2(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32 %5, i8* %6, i32* %7, i8* %8, i8* %9, i32* %10, i32 %11, i8* %12, i8* %13) #0 {
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i8*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i8*, align 8
  %24 = alloca i8*, align 8
  %25 = alloca i32*, align 8
  %26 = alloca i32, align 4
  %27 = alloca i8*, align 8
  %28 = alloca i8*, align 8
  store i32* %0, i32** %15, align 8
  store i32* %1, i32** %16, align 8
  store i32 %2, i32* %17, align 4
  store i32 %3, i32* %18, align 4
  store i32* %4, i32** %19, align 8
  store i32 %5, i32* %20, align 4
  store i8* %6, i8** %21, align 8
  store i32* %7, i32** %22, align 8
  store i8* %8, i8** %23, align 8
  store i8* %9, i8** %24, align 8
  store i32* %10, i32** %25, align 8
  store i32 %11, i32* %26, align 4
  store i8* %12, i8** %27, align 8
  store i8* %13, i8** %28, align 8
  %29 = load i32*, i32** %15, align 8
  %30 = load i32*, i32** %16, align 8
  %31 = load i32, i32* %17, align 4
  %32 = load i32, i32* %18, align 4
  %33 = load i32*, i32** %19, align 8
  %34 = load i32, i32* %20, align 4
  %35 = load i8*, i8** %21, align 8
  %36 = load i32*, i32** %22, align 8
  %37 = load i8*, i8** %23, align 8
  %38 = load i8*, i8** %24, align 8
  %39 = load i8*, i8** %24, align 8
  %40 = icmp eq i8* %39, null
  %41 = zext i1 %40 to i64
  %42 = select i1 %40, i32 0, i32 1
  %43 = load i32*, i32** %25, align 8
  %44 = load i32, i32* %26, align 4
  %45 = load i8*, i8** %27, align 8
  %46 = load i8*, i8** %28, align 8
  %47 = call i32* @HttpRequestEx3(i32* %29, i32* %30, i32 %31, i32 %32, i32* %33, i32 %34, i8* %35, i32* %36, i8* %37, i8* %38, i32 %42, i32* %43, i32 %44, i8* %45, i8* %46)
  ret i32* %47
}

declare dso_local i32* @HttpRequestEx3(i32*, i32*, i32, i32, i32*, i32, i8*, i32*, i8*, i8*, i32, i32*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
